Finish Live Location tracker App

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,15 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.14.1"
+
+flutter_launcher_icons:
+  android: true
+  remove_alpha_ios: true
+  ios: true
+  image_path: "assets/Images/tracker_logo.png"
+  adaptive_icon_background: "#ffffff" # You can use a color or image for the background
+  adaptive_icon_foreground: "assets/Images/tracker_logo.png" # For adaptive icons on Android
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -60,6 +69,9 @@ flutter:
     - assets/map_styles/night_map_style.json
     - assets/Images/map.png
     - assets/Images/marker_icon.png
+    - assets/Images/navigation.png
+    - assets/Images/my_location.png
+    - assets/Images/tracker_logo.png
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
